# xf86-input-xwiimote

./: .gitignore  60-xorg-xwiimote.conf  COPYING  Makefile.am  README  autogen.sh  configure.ac  xorg-xwiimote.4
src/: accelerometer.c  accelerometer.h  analog-stick-axis.c  analog-stick-axis.h  analog-stick.c  analog-stick.h  ir.c  ir.h  key.c  key.h  motionplus.c  motionplus.h  nunchuk.c  nunchuk.h  properties.c  properties.h  util.c  util.h  wiimote.c  wiimote.h  xwiimote-daemon.c  xwiimote.c  xwiimote.h
